[package]
name = "heap-monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cargo-bpf = { version = "2.3.0", default-features = false, features = ["build", "llvm-sys-130"] }
tracing = "0.1.26"
tracing-subscriber = "0.3.3"

[dependencies]
clap = {version = "3", features = ["derive"]}
probes = { path = "./probes" }
libc = "0.2"
tokio = { version = "1", features = ["rt-multi-thread", "signal", "sync"] }
redbpf = { version = "2.3.0", features = ["load"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
symbolic = { version = "8.5", default-features = false, features = ["demangle"] }
anyhow = "1"
ahash = "0.7.6"
goblin = "0.5.1"
thiserror = "1"
scroll = "0.11"
flate2 = "1"
owo-colors = { version = "3.3", features = ["supports-colors"]}
